--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1 style="text-align: center;">good work</h1>
     </header>
 
-    <!-- <script src="./js/task-1.js"></script>
+    <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
-    <script src="./js/task-4.js"></script> -->
+    <script src="./js/task-4.js"></script>
     <script src="./js/task-5.js"></script>
-    <!-- <script src="./js/task-6.js"></script> -->
+    <script src="./js/task-6.js"></script>
 </body>
 </html>
